syntax = "proto3";

package com.cartgatewayservice;

option java_multiple_files = true;
option java_package = "com.cartgatewayservice";

service ClientGuestService {
    rpc ClientGuest(ClientGuestRequest) returns (ClientGuestResponse){

    }
}

message ClientGuestRequest {
    int32 setclientguest_id = 1;
    string setclientguest_firstname = 2;
    string setclientguest_lastname = 3;
    string setclientguest_email = 4;

}
message ClientGuestResponse {

     int32 getclientguest_id = 1;
    string getclientguest_firstname = 2;
    string getclientguest_lastname = 3;
    string getclientguest_email = 4;
}
